[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=42",
  "setuptools-scm>=7",
]

[project]
name = "async-retriever"
description = "High-level API for asynchronous requests with persistent caching."
readme = "README.rst"
license = {text = "MIT"}
authors = [{name = "Taher Chegini", email = "cheginit@gmail.com"}]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Internet :: WWW/HTTP",
  "Typing :: Typed",
]
dynamic = [
  "version",
]
dependencies = [
  "aiohttp[speedups]>=3.8.3",
  "aiohttp-client-cache>=0.8.1",
  "aiosqlite",
  "cytoolz",
  "ujson",
]
[project.optional-dependencies]
notebook = [
  "nest-asyncio",
]
test = [
  "coverage[toml]",
  "pytest-cov",
  "pytest-xdist[psutil]",
]
[project.urls]
CI = "https://github.com/hyriver/async-retriever/actions"
Changelog = "https://docs.hyriver.io/changelogs/async-retriever.html"
Homepage = "https://docs.hyriver.io/readme/async-retriever.html"
Issues = "https://github.com/hyriver/async-retriever/issues"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]
platforms = ["any"]
zip-safe = false

[tool.setuptools.package-data]
async_retriever = ["py.typed"]

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]
fallback_version = "999"

[tool.black]
line-length = 100

[tool.isort]
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = "async_retriever"
line_length = 100
multi_line_output = 3
profile = "black"
use_parentheses = true

[tool.pytest.ini_options]
addopts = "--ignore=noxfile.py -n=auto -v --cov=async_retriever --cov-report xml --durations=5"
doctest_optionflags = 'NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER'
filterwarnings = [
  "ignore:.*distutils.*",
  "ignore:.*--rsyncdir command line argument.*",
  "ignore:.*numpy.ndarray size changed.*"
]
testpaths = [
  "tests",
  "async_retriever"
]

[tool.coverage.report]
exclude_lines = [
  "raise DependencyError",
  "if TYPE_CHECKING:",
  'if "IPython" in sys.modules:'
]
ignore_errors = true

[tool.coverage.run]
branch = true
omit = [
  "**/__init__.py",
  "**/print_versions.py"
]
parallel = true
source = ['async_retriever']

[tool.bandit]
targets = [
  "async_retriever"
]

[tool.codespell]
ignore-words-list = "paramss"
skip = "__pycache__,_build,.mypy_cache,.git,./htmlcov,.nox"

[tool.pycln]
all = true
exclude = "test_.*"
expand_stars = true
no_gitignore = false
path = "async_retriever"
verbose = true

[tool.pyright]
exclude = [
  ".nox/",
  "**/__pycache__",
  "**/__init__.py",
  "tests/"
]
include = ["async_retriever"]
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnnecessaryIsInstance = false
reportUntypedFunctionDecorator = false
typeCheckingMode = "strict"

[tool.refurb]
python_version = "3.8"
quiet = true
