[build-system]
build-backend = "hatchling.build"

requires = [
  "hatch-vcs",
  "hatchling",
]

[project]
name = "async-retriever"
description = "High-level API for asynchronous requests with persistent caching."
readme = "README.rst"
license = { text = "MIT" }
authors = [
  { name = "Taher Chegini", email = "cheginit@gmail.com" },
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Typing :: Typed",
]
dynamic = [
  "version",
]
dependencies = [
  "aiohttp[speedups]>=3.8.3",
  "aiohttp-client-cache>=0.8.1",
  "aiosqlite",
  "cytoolz",
  "ujson",
]
optional-dependencies.notebook = [
  "nest-asyncio",
]
optional-dependencies.test = [
  "pytest-cov",
  "pytest-sugar",
  "pytest-xdist[psutil]",
]
urls.Changelog = "https://docs.hyriver.io/changelogs/async-retriever.html"
urls.CI = "https://github.com/hyriver/async-retriever/actions"
urls.Homepage = "https://docs.hyriver.io/readme/async-retriever.html"
urls.Issues = "https://github.com/hyriver/async-retriever/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = [
  "src/async_retriever",
]

[tool.ruff]
target-version = "py38"
line-length = 100

exclude = [
  ".nox",
  "__pycache__",
]

format.docstring-code-format = true
lint.select = [
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C4",
  # pydocstyle
  "D",
  # Error
  "E",
  # pyflakes
  "F",
  # isort
  "I",
  # flake8-gettext
  "INT",
  # flake8-implicit-str-concat
  "ISC",
  # pep8-naming
  "N",
  # pygrep-hooks
  "PGH",
  # misc lints
  "PIE",
  # pylint
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  # flake8-pytest-style
  "PT",
  # flake8-use-pathlib
  "PTH",
  # flake8-pyi
  "PYI",
  # flake8-quotes
  "Q",
  # Ruff-specific rules
  "RUF",
  # bandit
  "S",
  # flake8-simplify
  "SIM",
  # flake8-debugger
  "T10",
  # flake8-print
  "T20",
  # type-checking imports
  "TCH",
  # tidy imports
  "TID",
  # tryceratops
  "TRY",
  # pyupgrade
  "UP",
  # Warning
  "W",
  # flake8-2020
  "YTT",
]

lint.ignore = [
  # docstring in class __init__
  "D107",
  # long too long, let the formatter handle it
  "E501",
  # conflict with ruff-formatter
  "ISC001",
  # too many arguments
  "PLR0913",
]

lint.per-file-ignores."tests/*.py" = [
  # Disable all docstring checks in tests
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "D105",
  "D106",
  "D107",
  # magic values
  "PLR2004",
  # Mutable class attributes
  "RUF012",
  # use of "assert"
  "S101",
  # possible hardcoded password
  "S106",
]
lint.extend-safe-fixes = [
  # absolute imports
  "TID252",
]
lint.flake8-bugbear.extend-immutable-calls = [
  "chr",
  "typer.Argument",
  "typer.Option",
]
lint.isort.known-first-party = [
  "async_retriever",
  "pygeoogc",
  "pygeoutils",
  "pynhd",
  "py3dep",
  "hydrosignatures",
  "pygeohydro",
  "pydaymet",
  "pygridmet",
  "pynldas2",
]
lint.isort.required-imports = [
  "from __future__ import annotations",
]
lint.pydocstyle.convention = "numpy"

[tool.codespell]
skip = "__pycache__,_build,.mypy_cache,.git,./htmlcov,.nox,**/us_abbrs.py,cache"
ignore-words-list = "gage,gages,paramss"

[tool.pytest.ini_options]
addopts = "--ignore=noxfile.py --doctest-modules -n=auto -v --durations=5"
doctest_optionflags = 'NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER'
filterwarnings = [
  "ignore:.*distutils.*",
  "ignore:.*--rsyncdir command line argument.*",
  "ignore:.*numpy.ndarray size changed.*",
  "ignore:.*'cgi' is deprecated.*",
  "ignore:.*Ensure you extract a single element.*",
  "ignore:.*Shapely GEOS version.*",
  "ignore:.*Deprecated in Pydantic V2.0.*",
]
testpaths = [
  "tests",
]

[tool.coverage.report]
exclude_lines = [
  'raise ServiceUnavailableError',
  "if TYPE_CHECKING:",
]
ignore_errors = true

[tool.coverage.paths]
source = [ "src", "*/site-packages" ]
omit = [
  "**/__init__.py",
  "**/print_versions.py",
]

[tool.coverage.run]
branch = true
parallel = true
source = [
  "async_retriever",
]

[tool.pyright]
exclude = [
  ".nox/",
  "**/__pycache__",
  "**/__init__.py",
  "tests/",
]
include = [
  "src/async_retriever",
]
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false
reportUnnecessaryIsInstance = false
reportUntypedFunctionDecorator = false
reportAttributeAccessIssue = false
typeCheckingMode = "strict"

[tool.fixit]
formatter = "ufmt"

[tool.refurb]
python_version = "3.8"
quiet = true
