[metadata]
name = async_retriever
description = High-level API for asynchronous requests with persistent caching.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/cheginit/async_retriever
author = Taher Chegini
author_email = cheginit@gmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Framework :: AsyncIO
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Typing :: Typed
project_urls =
    Homepage = https://github.com/cheginit/async_retriever
    Issues = https://github.com/cheginit/async_retriever/issues
    CI = https://github.com/cheginit/async_retriever/actions
    Changelog = https://github.com/cheginit/async_retriever/blob/main/HISTORY.rst

[options]
packages = find:
install_requires =
    aiohttp-client-cache>=0.6.0
    aiohttp[speedups]>=3.8.1
    aiosqlite
    cytoolz
    ujson
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.extras_require]
test =
    coverage[toml]
    pytest-cov
    pytest-xdist[psutil]
typeguard =
    coverage[toml]
    pygments
    pytest-cov
    pytest-xdist[psutil]
    typeguard

[options.package_data]
async_retriever =
    py.typed

[flake8]
ignore =
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
    E731 # do not assign a lambda expression, use a def
    W503 # line break before binary operator
    D107 # no need to add docstring for __init__
    D105 # no need to add docstring to magic methods
exclude =
    .eggs
    docs/*.py
    __init__.py
    .ipynb_checkpoints
    tests/*.py
    noxfile.py

[codespell]
skip = __pycache__,_build,.mypy_cache,.git,./htmlcov,.nox
ignore-words-list = paramss

[darglint]
strictness = short
docstring_style = numpy
ignore = DAR401,DAR103
ignore_regex = ^_(.*)
