[metadata]
name = async_retriever
description = High-level API for asynchronous requests with persistent caching.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/hyriver/async-retriever
author = Taher Chegini
author_email = cheginit@gmail.com
license = MIT
license_file = LICENSE
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Framework :: AsyncIO
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Typing :: Typed
project_urls =
    Homepage = https://docs.hyriver.io/readme/async-retriever.html
    Issues = https://github.com/hyriver/async-retriever/issues
    CI = https://github.com/hyriver/async-retriever/actions
    Changelog = https://docs.hyriver.io/changelogs/async-retriever.html

[options]
packages = find:
install_requires =
    aiohttp[speedups]>=3.8.1
    aiohttp-client-cache>=0.7.3
    aiosqlite
    cytoolz
    ujson
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.extras_require]
notebook =
    nest-asyncio
test =
    coverage[toml]
    pytest-cov
    pytest-xdist[psutil]
typeguard =
    coverage[toml]
    pygments
    pytest-cov
    pytest-xdist[psutil]
    typeguard

[options.package_data]
async_retriever =
    py.typed

[flake8]
ignore =
    E203
    E402
    E501
    E731
    W503
    D107
    D105
exclude =
    .eggs
    docs/*.py
    __init__.py
    .ipynb_checkpoints
    tests/*.py
    noxfile.py

[codespell]
skip = __pycache__,_build,.mypy_cache,.git,./htmlcov,.nox
ignore-words-list = paramss

[darglint]
strictness = short
docstring_style = numpy
ignore = DAR401,DAR103
ignore_regex = ^_(.*)
